--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
                 <configuration>
                     <source>8</source>
                     <target>8</target>
+                    <encoding>utf-8</encoding>
                 </configuration>
                 <version>3.8.1</version>
             </plugin>
